--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
+						<span class="avatar"><img src="images/BUUUUURRRGUURR.webp" alt="THIS IS BUR" /></span>
 						<h1>Hello, my name is <strong>Finley Vickers</strong>, a student, and the best at everything, jason sucks</a><br /></h1>
 						<ul class="icons">
 							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
