--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<!-- Header -->
 					<header id="header">
 						<span class="avatar"><img src="images/BUUUUURRRGUURR.webp" alt="THIS IS BUR" /></span>
-						<h1>Hello, my name is <strong>Finley Vickers</strong>, a student, and the best at everything, jason sucks</a><br /></h1>
+						<h1>Hello, my name is <strong>Finley Vickers</strong>, a student, and the best at everything, <a href "https://www.mcdonalds.com/ca/en-ca.html" jason sucks></a><br /></h1>
 						<ul class="icons">
 							<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
